--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,10 @@
-version: '3.9'
-
 services:
   db:
-    image: postgres:16
-    container_name: upskill_postgres
-    restart: always
+    image: postgres:17
     environment:
+      POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -16,22 +12,19 @@ services:
     env_file:
       - .env
 
-  web:
+  django-web:
     build: .
-    container_name: upskill_web
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/app
+    container_name: online_course
     ports:
       - "8000:8000"
     depends_on:
       - db
     environment:
-      DJANGO_DB_NAME: ${DB_NAME}
-      DJANGO_DB_USER: ${DB_USER}
-      DJANGO_DB_PASSWORD: ${DB_NAME}
-      DJANGO_DB_HOST: db
-      DJANGO_DB_PORT: 5432
+      DATABASE_NAME: ${DB_NAME}
+      DATABASE_USERNAME: ${DB_USER}
+      DATABASE_PASSWORD: ${DB_PASSWORD}
+      DATABASE_HOST: ${DB_HOST}
+      DATABASE_PORT: ${DB_PORT}
     env_file:
       - .env
 
